log/build_2025-09-26_21-53-51/raspi_car/stdout_stderr.log
running egg_info
creating ../build/raspi_car/raspi_car.egg-info
writing ../build/raspi_car/raspi_car.egg-info/PKG-INFO
writing dependency_links to ../build/raspi_car/raspi_car.egg-info/dependency_links.txt
writing entry points to ../build/raspi_car/raspi_car.egg-info/entry_points.txt
writing requirements to ../build/raspi_car/raspi_car.egg-info/requires.txt
writing top-level names to ../build/raspi_car/raspi_car.egg-info/top_level.txt
writing manifest file '../build/raspi_car/raspi_car.egg-info/SOURCES.txt'
reading manifest file '../build/raspi_car/raspi_car.egg-info/SOURCES.txt'
writing manifest file '../build/raspi_car/raspi_car.egg-info/SOURCES.txt'
running build
running build_py
creating /home/stefan/Desktop/~ros2_ws/build/raspi_car/build
creating /home/stefan/Desktop/~ros2_ws/build/raspi_car/build/lib
creating /home/stefan/Desktop/~ros2_ws/build/raspi_car/build/lib/raspi_car
copying raspi_car/__init__.py -> /home/stefan/Desktop/~ros2_ws/build/raspi_car/build/lib/raspi_car
copying raspi_car/motor_node.py -> /home/stefan/Desktop/~ros2_ws/build/raspi_car/build/lib/raspi_car
running install
running install_lib
creating /home/stefan/Desktop/~ros2_ws/install/raspi_car/lib/python3.12/site-packages/raspi_car
copying /home/stefan/Desktop/~ros2_ws/build/raspi_car/build/lib/raspi_car/__init__.py -> /home/stefan/Desktop/~ros2_ws/install/raspi_car/lib/python3.12/site-packages/raspi_car
copying /home/stefan/Desktop/~ros2_ws/build/raspi_car/build/lib/raspi_car/motor_node.py -> /home/stefan/Desktop/~ros2_ws/install/raspi_car/lib/python3.12/site-packages/raspi_car
byte-compiling /home/stefan/Desktop/~ros2_ws/install/raspi_car/lib/python3.12/site-packages/raspi_car/__init__.py to __init__.cpython-312.pyc
byte-compiling /home/stefan/Desktop/~ros2_ws/install/raspi_car/lib/python3.12/site-packages/raspi_car/motor_node.py to motor_node.cpython-312.pyc
  File "/home/stefan/Desktop/~ros2_ws/install/raspi_car/lib/python3.12/site-packages/raspi_car/motor_node.py", line 7
    class MotorNode(Node)
                         ^
SyntaxError: expected ':'

running install_data
creating /home/stefan/Desktop/~ros2_ws/install/raspi_car/share/ament_index
creating /home/stefan/Desktop/~ros2_ws/install/raspi_car/share/ament_index/resource_index
creating /home/stefan/Desktop/~ros2_ws/install/raspi_car/share/ament_index/resource_index/packages
copying resource/raspi_car -> /home/stefan/Desktop/~ros2_ws/install/raspi_car/share/ament_index/resource_index/packages
copying package.xml -> /home/stefan/Desktop/~ros2_ws/install/raspi_car/share/raspi_car
running install_egg_info
Copying ../build/raspi_car/raspi_car.egg-info to /home/stefan/Desktop/~ros2_ws/install/raspi_car/lib/python3.12/site-packages/raspi_car-0.0.0-py3.12.egg-info
running install_scripts
Installing motor_node script to /home/stefan/Desktop/~ros2_ws/install/raspi_car/lib/raspi_car
writing list of installed files to '/home/stefan/Desktop/~ros2_ws/build/raspi_car/install.log'
